tests/derive/not_entities.rs
use shipyard::*;

#[system(Test)]
fn run(_: Not<Entities>) {}